--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -287,103 +287,107 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="row">
 
 <div class="columno">
-<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a href="https://embtaku.com/download?id=MTE2ODI1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+1" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 02</strong><a href="https://embtaku.com/download?id=MTE3NDQx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+2" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 03</strong><a href="https://embtaku.com/download?id=MTE4Mjcx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+3" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 04</strong><a href="https://embtaku.com/download?id=MTE4Nzc5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+4" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 05</strong><a href="https://embtaku.com/download?id=MTE5MjY1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+5" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 06</strong><a href="https://embtaku.com/download?id=MTE5ODAy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+6" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 07</strong><a href="https://embtaku.com/download?id=MTIwMzU1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+7" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 08</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 08</strong><a href="https://embtaku.com/download?id=MTIxMDg5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+8" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 09</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 09</strong><a href="https://embtaku.com/download?id=MTIxNjQ2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+9" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 10</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 10</strong><a href="https://embtaku.com/download?id=MTIyMjA5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+10" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 11</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 11</strong><a href="https://embtaku.com/download?id=MTIyNjIw&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+11" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 12</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 12</strong><a href="https://embtaku.com/download?id=MTIzMTE0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+12" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 14</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 13</strong><a href="https://embtaku.com/download?id=MTIzNzQz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+13" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 15</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 14</strong><a href="https://embtaku.com/download?id=MTI0MDU4&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+14" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 16</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 15</strong><a href="https://embtaku.com/download?id=MTI0NTA1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+15" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 17</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 16</strong><a href="https://embtaku.com/download?id=MTI0OTI0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+16" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 18</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 17</strong><a href="https://embtaku.com/download?id=MTI1MjYz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+17" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 19</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 18</strong><a href="https://embtaku.com/download?id=MTI1NTg0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+18" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 20</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 19</strong><a href="https://embtaku.com/download?id=MTI2MDk2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+19" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 21</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 20</strong><a href="https://embtaku.com/download?id=MTI2NTI0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+20" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 22</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 21</strong><a href="https://embtaku.com/download?id=MTI3MTQw&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+21" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 23</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 22</strong><a href="https://embtaku.com/download?id=MTI3Nzc0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+22" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 24</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 23</strong><a href="https://embtaku.com/download?id=MTI4MjU0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+23" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 25</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 24</strong><a href="https://embtaku.com/download?id=MTI4NjI2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+24" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 26</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 25</strong><a href="https://embtaku.com/download?id=MTI5NTky&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+25" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 26</strong><a href="https://embtaku.com/download?id=MTMwMDQy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba+Episode+26" alt="Download episode">Download</a></span>
 </div>
 
 </div>
