--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -240,9 +240,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <!-----END SEASON THREE EPISODES----->
 
-<!-----SEASON TWO EPISODES----->
+<!-----SEASON TWO PART 2 EPISODES----->
 <div class="container-11">
-<h2 id="season2">Season Two</h2>
+<h2 id="season2">Season Two Part 2</h2>
 
 <!---Episodes---->
 <div class="block-1">
@@ -272,11 +272,57 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
+<div class="columno">
+<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
 </div>
 </div>
 <!---End Episodes---->
 </div>
-<!-----END SEASON TWO EPISODES----->
+<!-----END SEASON TWO PART 2 EPISODES----->
+
+<!-----SEASON TWO PART 1 EPISODES----->
+<div class="container-11">
+<h2 id="season2">Season Two Part 2</h2>
+
+<!---Episodes---->
+<div class="block-1">
+<div class="row">
+
+<div class="columno">
+<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+</div>
+</div>
+<!---End Episodes---->
+</div>
+<!-----END SEASON TWO PART 1 EPISODES----->
 	
 <!-----SEASON ONE EPISODES----->
 <div class="container-11">
