--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -284,38 +284,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-----SEASON TWO PART 1 EPISODES----->
 <div class="container-11">
-<h2 id="season2">Season Two Part 2</h2>
+<h2 id="season2">Season Two Part 1</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
 <div class="columno">
-<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a href="https://embtaku.com/download?id=MTcyMzAy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+1" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 02</strong><a href="https://embtaku.com/download?id=MTcyNzgw&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+2" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 03</strong><a href="https://embtaku.com/download?id=MTczNDYy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+3" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 04</strong><a href="https://embtaku.com/download?id=MTc0MTgy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+4" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 05</strong><a href="https://embtaku.com/download?id=MTc0NTYx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+5" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 06</strong><a href="https://embtaku.com/download?id=MTc0OTUx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+6" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 07</strong><a href="https://embtaku.com/download?id=MTc1NDA0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Mugen+Ressha-hen+Episode+7" alt="Download episode">Download</a></span>
 </div>
 
 </div>
