--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -249,31 +249,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="row">
 
 <div class="columno">
-<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a href="https://embtaku.com/download?id=MTc1Nzgy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+1" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 02</strong><a href="https://embtaku.com/download?id=MTc2MTg1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+2" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 03</strong><a href="https://embtaku.com/download?id=MTc2NjM0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+3" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 04</strong><a href="https://embtaku.com/download?id=MTc2OTcz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+4" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 05</strong><a href="https://embtaku.com/download?id=MTc3NDg2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+5" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 06</strong><a href="https://embtaku.com/download?id=MTc3ODcz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+6" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 07</strong><a href="https://embtaku.com/download?id=MTc4MjQz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+7" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 08</strong><a href="https://embtaku.com/download?id=MTc5MDAz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+8" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 09</strong><a href="https://embtaku.com/download?id=MTc5NTY2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+9" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 10</strong><a href="https://embtaku.com/download?id=MTgwMDI3&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+10" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 11</strong><a href="https://embtaku.com/download?id=MTgwNDk2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Yuukaku-hen+Episode+11" alt="Download episode">Download</a></span>
 </div>
 
 </div>
