--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -204,7 +204,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-----SEASON THREE EPISODES----->
 <div class="container-11">
-<h2 id="season3">Season Three</h2>
+<h2 id="season3">Season Three - Swordsmith Village Arc</h2>
 
 <!---Episodes---->
 <div class="block-1">
@@ -234,6 +234,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
+<div class="columno">
+<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 08</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 09</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 10</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 11</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
 </div>
 </div>
 <!---End Episodes---->
@@ -242,7 +262,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-----SEASON TWO PART 2 EPISODES----->
 <div class="container-11">
-<h2 id="season2">Season Two Part 2</h2>
+<h2 id="season2">Season Two Part 2 - Entertainment District Arc</h2>
 
 <!---Episodes---->
 <div class="block-1">
@@ -300,7 +320,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-----SEASON TWO PART 1 EPISODES----->
 <div class="container-11">
-<h2 id="season2">Season Two Part 1</h2>
+<h2 id="season2">Season Two Part 1 - Mugen Train Arc</h2>
 
 <!---Episodes---->
 <div class="block-1">
@@ -342,7 +362,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 <!-----SEASON ONE EPISODES----->
 <div class="container-11">
-<h2 id="season1">Season One</h2>
+<h2 id="season1">Season One - Tanjiro Kamado, Unwavering Resolve Arc</h2>
 
 <!---Episodes---->
 <div class="block-1">
