--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -211,47 +211,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="row">
 
 <div class="columno">
-<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a href="https://embtaku.com/download?id=MjAyNDc0&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+1" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 02</strong><a href="https://embtaku.com/download?id=MjAyOTQ5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+2" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 03</strong><a href="https://embtaku.com/download?id=MjAzMjkx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+3" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 04</strong><a href="https://embtaku.com/download?id=MjAzNjk5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+4" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 05</strong><a href="https://embtaku.com/download?id=MjA0MDg3&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+5" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 06</strong><a href="https://embtaku.com/download?id=MjA0NTA2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+6" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 07</strong><a href="https://embtaku.com/download?id=MjA0NzY2&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+7" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 08</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 08</strong><a href="https://embtaku.com/download?id=MjA1MDkw&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+8" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 09</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 09</strong><a href="https://embtaku.com/download?id=MjA1NTIz&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+9" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 10</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 10</strong><a href="https://embtaku.com/download?id=MjA2MDE5&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+10" alt="Download episode">Download</a></span>
 </div>
 
 <div class="columno">
-<span><strong itemprop="name">Episode 11</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 11</strong><a href="https://embtaku.com/download?id=MjA2NDQw&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Katanakaji+no+Sato-hen+Episode+11" alt="Download episode">Download</a></span>
 </div>
 
 </div>
