--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -159,24 +159,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 <!-----SEASON FOUR EPISODES----->
 <div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
-<h2 id="season4">Season Four</h2>
+<h2 id="season4">Season Four - Hashira Training Arc</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.com/download?id=MjI1MzE1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+1" href="https://embtaku.com/download?id=MjI1MzE1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+1" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="1">
 </div>
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.com/download?id=MjI1Njkx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+2" href="https://embtaku.com/download?id=MjI1Njkx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+2" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="2">
 </div>
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.com/download?id=MjI2MTgy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+3" href="https://embtaku.com/download?id=MjI2MTgy&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+3" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="3">
 </div>
 
