--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -181,17 +181,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.pro/download?id=MjI2NTMx" href="https://embtaku.pro/download?id=MjI2NTMx" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="4">
 </div>
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.com/download?id=MjI2Nzc1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+5" href="https://embtaku.com/download?id=MjI2Nzc1&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+5" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="5">
 </div>
 
 <div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="https://embtaku.com/download?id=MjI3MDMx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+6" href="https://embtaku.com/download?id=MjI3MDMx&typesub=Gogoanime-SUB&title=Kimetsu+no+Yaiba%3A+Hashira+Geiko-hen+Episode+6" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="6">
 </div>
 
